log
Wed 23 Aug 2023 07:24:17 PM UTC: 
 list.c | 38 ++++++++++++++++++++++----------------
 1 file changed, 22 insertions(+), 16 deletions(-)
 tests:  0|0
3a6fc19
Wed 23 Aug 2023 07:33:20 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7eba3ce
Wed 23 Aug 2023 07:34:37 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
83f4587
Wed 23 Aug 2023 07:36:10 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e40ab7f
Thu 24 Aug 2023 06:02:27 PM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
84078a7
Thu 24 Aug 2023 06:08:32 PM UTC: 
 list.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
d036ba6
